# masters_mipt_alpha_rag

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: build_index.py  evaluate.py  length_sweep.py  metric_probe.py  run_pipeline.py  smoke.py  threshold_sweep.py
src/rag/: config.py  pipeline.py  schema.py
src/rag/eval/: abstain_eval.py  devset.py  metric.py
src/rag/generator/: abstain.py  generator.py  length.py  llm.py  prompt.py
src/rag/indexer/: build.py  chunk.py  clean.py  embed.py
src/rag/retriever/: base.py  bm25.py  cache.py  dense.py  factory.py  hybrid.py
tests/: test_abstain.py  test_bm25.py  test_build.py  test_cache.py  test_chunk.py  test_clean.py  test_config.py  test_dense.py  test_eval.py  test_factory.py  test_generator.py  test_hybrid.py  test_length.py  test_llm.py  test_metric.py  test_pipeline.py  test_prompt.py  test_schema.py
