[project]
name = "masters_mipt_alpha_rag"
version = "0.1.0"
description = "MIPT x Alpha 26, RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
# Для запуска на GPU
gpu = [
    "sentence-transformers>=5.6.0",
    "bert-score>=0.3.13",
    "pyarrow>=24.0.0",
    "vllm>=0.23.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
